fix: hopefully remove weird render problems on mobile

--- a/src/styles/components/_Navbar.scss
+++ b/src/styles/components/_Navbar.scss
@@ -2,6 +2,8 @@
   border-right: 1px solid #eaeaea;
   border-bottom: 1px solid #eaeaea;
   width: 25vw;
+
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
   @include respond(tab-port) {
     width: 100%;
   }
